Clean up some commented-out small-screen styles. (#308)

--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1362,14 +1362,12 @@ body.search-results .search-navigation a { text-decoration: underline; }
   footer .navigation .legal li:after { content: none; }
   footer .support { height: 63px; margin: 14px 0 0; padding: 0; }
   footer .support img { padding-bottom: 6px; }
-  .content .container { padding: 0; /*&.free-sidebar #sidebar .section { padding-bottom: $sidebar-box-vertical-padding;
-}*/ }
+  .content .container { padding: 0; }
   .content #main { background: none; float: none; min-height: inherit; padding-bottom: 14px; padding-left: 0; margin-left: 8px; margin-right: 8px; }
   .content #main .smallscreen-anchor-nav { display: block; padding: 8px 0 16px; }
   .content #main .smallscreen-anchor-nav a { font-family: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif; font-size: 14px; padding: 8px 0; text-decoration: underline; }
-  .content #sidebar { background: #fff; border: 1px solid #c3d941; clear: left; height: auto; /*margin-bottom: 14px;*/ margin-left: 8px; margin-right: 8px; /*.section:first-child { margin-top: 0;
-}*/ }
-  .content #sidebar .section { /*margin-top: $sidebar-box-vertical-padding;*/ padding-bottom: 16px; }
+  .content #sidebar { background: #fff; border: 1px solid #c3d941; clear: left; height: auto; margin-left: 8px; margin-right: 8px; }
+  .content #sidebar .section { padding-bottom: 16px; }
   .gb-tooltip { width: 200px; }
   /* Advanced ID placeholder page: delete after tools release */
   #advanced-id #main .dk-landing-section { height: auto; margin-top: 14px; width: auto; }
