Choose a more familiar small-screen navigation icon.
A menu icon consisting of three horizontal lines is increasingly
seen on mobile sites to indicate a navigation list. This
replaces our old icon of a plus sign. (#308)

--- a/gobotany/site/templates/gobotany/_header.html
+++ b/gobotany/site/templates/gobotany/_header.html
@@ -10,7 +10,7 @@
             <p class="newfs"><a href="http://www.newenglandwild.org/">New
                 England Wild Flower Society</a></p>
             <nav>
-                <a href="javascript:document.getElementById('footer-nav').scrollIntoView();">+<span>sections</span></a>
+                <a href="javascript:document.getElementById('footer-nav').scrollIntoView();"><span>sections</span></a>
                 {% include "gobotany/_primary_navigation_top.html" %}
                 <div id="search">
                     <form id="search-suggest" action="/search/" autocomplete="off">
