--- a/gobotany/static/sass/_simplekey.scss
+++ b/gobotany/static/sass/_simplekey.scss
@@ -946,6 +946,31 @@ body.skey {
                 display: none;
             }
         }
+        &.results {
+            #main {
+                float: right;
+                width: 710px;
+            }
+            .content .container {
+                padding: 0;
+                width: 960px;
+            }
+            #sidebar {
+                float: left;
+                margin: 0;
+                padding: 0;
+                width: 228px;
+                .scroll + .section {
+                    margin: 0 0 32px;
+                }
+            }
+            h3.species-count-heading {
+                white-space: nowrap;
+            }
+            .section + .section {
+                margin-bottom: 16px;
+            }
+        }
     }
 }
 /* These styles apply to smartphones and tablets */
