--- a/gobotany/site/templates/gobotany/_footer.html
+++ b/gobotany/site/templates/gobotany/_footer.html
@@ -14,7 +14,9 @@
                 </div>
                 <div class="navigation">
                     <h6>Go Botany</h6>
-                    {% include "gobotany/_primary_navigation_bottom.html" %}
+                    <ul id="footer-nav" class="sections">
+                        {% include "gobotany/_primary_navigation.html" %}
+                    </ul>
                     <h6>Legal</h6>
                     <ul class="legal">
                         <li>{% nav_item 'Privacy Policy' site-privacy %}</li>
