Link to the D. Key in the for-Production navigation. (#326)

--- a/gobotany/site/templates/gobotany/_primary_navigation.html
+++ b/gobotany/site/templates/gobotany/_primary_navigation.html
@@ -11,7 +11,7 @@
         {# Production navigation, with some features unreleased yet #}
         <li class="plantshare">{% nav_item 'PlantShare' plantshare-placeholder %}</li>
         <li class="full">{% nav_item 'Full Key' full-key-placeholder %}</li>
-        <li class="dkey">{% nav_item 'Dichotomous Key' dich-key-placeholder %}</li>
+        <li class="dkey">{% nav_item 'Dichotomous Key' dkey %}</li>
     {% endif %}
     <li class="teaching">{% nav_item 'Teaching' site-teaching %}</li>
     <li class="help">{% nav_item 'Help' site-help %}</li>
