Add a notification message to image upload forms.
Users should be notified that images uploaded are screened by staff, in
case they wonder why images dont' immediately appear, or are removed if
found unsuitable.

--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -34,6 +34,9 @@
           {% csrf_token %}
           {{ upload_photo_form.image }}
           <div style="display: none;">{{ upload_photo_form.image_type }}</div>
+          <div class="screening-notify">
+              <p>All images are screened by Plantshare Staff before being displayed publically.</p>
+          </div>
           <input type="submit" id="upload-photo-submit" class="save-btn">
       </form>
   </div>
