--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -311,7 +311,7 @@ body.plantshare {
                 padding: 15px;
                 position: absolute;
                 width: 400px;
-                height: 120px;
+                height: 150px;
                 top: 250px;
                 left: 0px;
                 z-index: 10;
@@ -339,7 +339,6 @@ body.plantshare {
 
                 form {
                     float: right;
-                    margin: 15px 0;
                     width: 290px;
                 }
                 
@@ -352,6 +351,12 @@ body.plantshare {
                     clear: both;
                     display: block;
                     margin: 0 0 10px;
+                }
+
+                div.screening-notify p {
+                  margin: 5px 0;
+                  font-size: 10px;
+                  color: #888;
                 }
             }
         }
@@ -377,7 +382,7 @@ body.plantshare {
                 padding: 15px;
                 position: absolute;
                 width: 400px;
-                height: 120px;
+                height: 150px;
                 top: 35px;
                 left: 20px;
                 z-index: 10;
@@ -405,7 +410,7 @@ body.plantshare {
 
                 form {
                     float: right;
-                    margin: 15px 0;
+                    margin: 0;
                     width: 290px;
                 }
                 
@@ -420,6 +425,11 @@ body.plantshare {
                     margin: 0 0 10px;
                 }
 
+                div.screening-notify p {
+                  margin: 5px 0;
+                  font-size: 10px;
+                  color: #888;
+                }
 
             }
         }
